# book_tool

./: pdf_content.json  pyproject.toml
book_tool/: BookInspector.py  BookShelfManager.py  Librarian.py  TOCParser.py  UserInterface.py  main.py
tests/: test.py
