[tool.poetry]
name = "book-tool"
version = "0.1.0"
description = ""
authors = ["FancyKat <fancykatbase@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pypdf = "^3.15.4"
pdfplumber = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120